# UniCreate

./: .env.example  .gitignore  CONTEXT.md  LICENSE  OPEN_IDE_HERE.md  PATCHNOTE_v1.0.1.md  PATCHNOTE_v1.0.3.md  PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: app.js  index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: github.rs  hash.rs  lib.rs  main.rs  yaml_generator.rs
src/components/: Sidebar.tsx  StepperHeader.tsx
src/lib/: repo-mappings.ts  types.ts
src/pages/: Home.tsx  StepInstaller.tsx  StepMetadata.tsx  StepReview.tsx  StepSubmit.tsx
src/stores/: auth-session-store.ts  history-store.ts  manifest-store.ts  toast-store.ts
updater/: package-lock.json  package.json
updater/src/: index.html
updater/src-tauri/: Cargo.toml  tauri.conf.json
updater/src-tauri/src/: lib.rs  main.rs
